# modulo_three

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/finite_state_machine/: __init__.py  automation.py  exception.py  state.py  types.py
src/finite_state_machine/exception/: __init__.py  base_exception.py  invalid_alphabet.py  invalid_final_state.py  invalid_initial_state.py  invalid_input.py  invalid_transition.py
src/modulo_three/: __init__.py  modulo_three.py  state.py  utils.py
src/modulo_three/utils/: state.py
tests/: test_version.py
tests/modulo_three/: test_benchmark.py  test_mod_three.py  test_state.py
