[build-system]
requires = ["setuptools >= 79", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "modulo_three"
description = "This project computes the modulo of a binary string input."
maintainers = [
    {name = "Umang Shrestha", email="umangshrestha09@gmail.com"}
]
dynamic = ["version"]
requires-python = ">=3.11,<3.13"
dependencies = [
    "typing-extensions>=4.14.1",
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
tests = [
    "ruff==0.11.7",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1"
]
included = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["modulo_three", "finite_state_machine"]
exclude = ["tests*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
write_to = "src/modulo_three/_version.py"

[tool.ruff]
include = [
    "src/**/*.py",
]
exclude = [
    "tests/**"
]
line-length = 90
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    "SIM116",
]

[tool.ruff.lint.flake8-bugbear]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
addopts = "--junitxml=test-coverage/junit.xml --cov --cov-report xml:test-coverage/coverage.xml --cov-report html:test-coverage/html"
pythonpath = ["src"]
testpaths = [
    "tests",
]


[tool.coverage.run]
branch = true
source = [
    "modulo_three",
    "finite_state_machine",
]
